# rely

./: .gitignore  LICENSE  README.md  UATS_VALUE_MODEL_UPDATE.md  calculate_stats.py  gp_model_state.pth  main.py  probe.pth  pum-eval.py  pyproject.toml  ray-evaluate.py  requirements.txt  run_uats.py  serve.sh  test_tree_visualization.py  uats.py  uats.sh  upload_dataset.py  value.py  value_probe.pth
configs/: accelerate_config.yaml  deepspeed_config.json
deepspeed_configs/: zero1.json  zero3.json  zero3_bf16_optimized.json
models/: c_uncertainty_probe.pth  r_uncertainty_probe.pth  r_uncertainty_probe_1k.pth  uncertainty_probe.pth  value_probe.pth
rely/: README.md  __init__.py  evaluate.py  extract.py  inference.py  utils.py
rely/complete/: __init__.py  complete.py  complete_nn.py  completer.py  generate.py
rely/entropy_threshold/: aggregate_entropies.py  entropy-threshold.py  entropy_aggregator.py  entropy_calculator.py  parallel_processor.py  utils.py
rely/evaluate/: pum_eval.py  sbs_eval.py  score_self_consistency.py
rely/extract/: __init__.py  activations.py  activations_parallel.sh  fork.py  score.py  (+2 more)
scripts/: complete.py  convert_dataset.py  copy_and_rename_uats.py  count_unique_combinations.py  distribution_end.py  distribution_regression.py  eval.py  extract_activations.sh  prm-eval.py  process-bench.py  pum-eval.py  run_uats.py  sbs.sh  sbs_old.py  sbs_parallel.py  sbs_parallel_value_model.py  sbs_stats.py  sbs_uncertain.sh  scaling-compare.py  scaling-single.py  stats.py  uats.py  uats.sh  upload_dataset.py  upload_model.py
wandb/: latest-run
(+445 files in other folders)
