[project]
name = "rely"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "matplotlib>=3.10.5",
    "pygraphviz>=1.14",
    "seaborn>=0.13.2",
    "torch==2.8.0",
    "transformers>=4.55.0",
    "unsloth>=2024.8",
    "unsloth-zoo>=2025.8.1",
]
