[project]
name = "rely"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "axolotl[deepspeed]>=0.11.0",
    "deepspeed>=0.17.1",
    "huggingface-hub>=0.32.2",
    "seaborn>=0.13.2",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "vllm>=0.8.5.post1",
    "wandb>=0.21.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
